Fix T38655: Face path select fails with edge/vert select enabled too